src/test/deca/context/valid/class/instanciate_class.deca
// Description:
//    Un constructeur correct
//
// Resultats:
//    Context: pas d'erreur
//
// Historique:
//    cree le 20/01/2022

class A{
    int x ;
}

{
    A a = new A();
}
