src/test/deca/context/invalid/class_sans_method/instanciate_non_class.deca
// Description:
//    Un constructeur incorrect
//
// Resultats:
//    Context: erreur line 11
//
// Historique:
//    cree le 20/01/2022

{
    int x = new NotAClass();
}
